// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <nav
    className="xs:mb-6 sm:flex sm:items-center sm:justify-between sm:flex-wrap sm:bg-white sm:p-6"
  >
    <div
      className="sm:flex sm:items-center sm:flex-shrink-0 sm:text-white sm:mr-6 "
    >
      <img
        alt="swapchain logo"
        className="mx-auto mt-10 mb-5 sm:ml-10"
        height="100"
        src="Logo_Swapchain_Bold_Subline.svg"
        width="100"
      />
    </div>
    <div
      className="flex justify-between mx-2 justify-around mb-4 sm:mb-0"
    >
      <button
        className="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        onClick={[Function]}
      >
        Home
      </button>
      <button
        className="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        onClick={[Function]}
      >
        What are ACCS?
      </button>
      <button
        className="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded"
        onClick={[Function]}
      >
        GitHub
      </button>
    </div>
  </nav>
  <section
    className="bg-green-500 p-10"
  >
    <form
      className="w-full"
    >
      <div
        className="flex flex-wrap mx-64 mb-2 max-w-lg"
      />
      <h1
        className="text-center font-bold"
      >
        About the Project
      </h1>
      <br />
      <div
        className="text-center"
      >
        Swapchain is a software product being developed by a group of students from the Friedrich-Alexander-University Erlangen-Nuremberg (FAU), in the frame of the course "Agile Methods and Open Source" (AMOS) held by the Open Source Software Chair of Prof. Dr. Dirk Riehle. As the project unfolds according to the "Agile Methods" principles, roles and responsibilites can be clearly allocated.
      </div>
      <div
        className="flex flex-wrap mx-64 mb-6"
      />
    </form>
  </section>
</div>
`;

exports[`StartingPage matches the desktop snapshot 1`] = `
<div>
  <div>
    <nav
      class="xs:mb-6 sm:flex sm:items-center sm:justify-between sm:flex-wrap sm:bg-white sm:p-6"
    >
      <div
        class="sm:flex sm:items-center sm:flex-shrink-0 sm:text-white sm:mr-6 "
      >
        <img
          alt="swapchain logo"
          class="mx-auto mt-10 mb-5 sm:ml-10"
          height="100"
          src="Logo_Swapchain_Bold_Subline.svg"
          width="100"
        />
      </div>
      <div
        class="flex justify-between mx-2 justify-around mb-4 sm:mb-0"
      >
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        >
          Home
        </button>
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        >
          What are ACCS?
        </button>
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded"
        >
          GitHub
        </button>
      </div>
    </nav>
    <section
      class="bg-green-500 p-10"
    >
      <form
        class="w-full"
      >
        <div
          class="flex flex-wrap mx-64 mb-2 max-w-lg"
        />
        <h1
          class="text-center font-bold"
        >
          About the Project
        </h1>
        <br />
        <div
          class="text-center"
        >
          Swapchain is a software product being developed by a group of students from the Friedrich-Alexander-University Erlangen-Nuremberg (FAU), in the frame of the course "Agile Methods and Open Source" (AMOS) held by the Open Source Software Chair of Prof. Dr. Dirk Riehle. As the project unfolds according to the "Agile Methods" principles, roles and responsibilites can be clearly allocated.
        </div>
        <div
          class="flex flex-wrap mx-64 mb-6"
        />
      </form>
    </section>
  </div>
</div>
`;

exports[`StartingPage matches the desktop snapshot 2`] = `
<div>
  <div>
    <nav
      class="xs:mb-6 sm:flex sm:items-center sm:justify-between sm:flex-wrap sm:bg-white sm:p-6"
    >
      <div
        class="sm:flex sm:items-center sm:flex-shrink-0 sm:text-white sm:mr-6 "
      >
        <img
          alt="swapchain logo"
          class="mx-auto mt-10 mb-5 sm:ml-10"
          height="100"
          src="Logo_Swapchain_Bold_Subline.svg"
          width="100"
        />
      </div>
      <div
        class="flex justify-between mx-2 justify-around mb-4 sm:mb-0"
      >
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        >
          Home
        </button>
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        >
          What are ACCS?
        </button>
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded"
        >
          GitHub
        </button>
      </div>
    </nav>
    <section
      class="bg-green-500 p-10"
    >
      <form
        class="w-full"
      >
        <div
          class="flex flex-wrap mx-64 mb-2 max-w-lg"
        />
        <h1
          class="text-center font-bold"
        >
          About the Project
        </h1>
        <br />
        <div
          class="text-center"
        >
          Swapchain is a software product being developed by a group of students from the Friedrich-Alexander-University Erlangen-Nuremberg (FAU), in the frame of the course "Agile Methods and Open Source" (AMOS) held by the Open Source Software Chair of Prof. Dr. Dirk Riehle. As the project unfolds according to the "Agile Methods" principles, roles and responsibilites can be clearly allocated.
        </div>
        <div
          class="flex flex-wrap mx-64 mb-6"
        />
      </form>
    </section>
  </div>
</div>
`;

exports[`StartingPage matches the mobile snapshot 1`] = `
<div>
  <div>
    <nav
      class="xs:mb-6 sm:flex sm:items-center sm:justify-between sm:flex-wrap sm:bg-white sm:p-6"
    >
      <div
        class="sm:flex sm:items-center sm:flex-shrink-0 sm:text-white sm:mr-6 "
      >
        <img
          alt="swapchain logo"
          class="mx-auto mt-10 mb-5 sm:ml-10"
          height="100"
          src="Logo_Swapchain_Bold_Subline.svg"
          width="100"
        />
      </div>
      <div
        class="flex justify-between mx-2 justify-around mb-4 sm:mb-0"
      >
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        >
          Home
        </button>
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded sm:mr-4"
        >
          What are ACCS?
        </button>
        <button
          class="bg-white hover:bg-green-500 text-black font-bold py-2 px-4 border border-black-700 rounded"
        >
          GitHub
        </button>
      </div>
    </nav>
    <section
      class="bg-green-500 p-10"
    >
      <form
        class="w-full"
      >
        <div
          class="flex flex-wrap mx-64 mb-2 max-w-lg"
        />
        <h1
          class="text-center font-bold"
        >
          About the Project
        </h1>
        <br />
        <div
          class="text-center"
        >
          Swapchain is a software product being developed by a group of students from the Friedrich-Alexander-University Erlangen-Nuremberg (FAU), in the frame of the course "Agile Methods and Open Source" (AMOS) held by the Open Source Software Chair of Prof. Dr. Dirk Riehle. As the project unfolds according to the "Agile Methods" principles, roles and responsibilites can be clearly allocated.
        </div>
        <div
          class="flex flex-wrap mx-64 mb-6"
        />
      </form>
    </section>
  </div>
</div>
`;
